--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "firebase": "^9.11.0",
     "next": "12.3.1",
+    "notion-client": "^6.15.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
